# NorthFile

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  RELEASE_NOTES_0.1.0.md
FileExplorerUI/: App.xaml  App.xaml.cs  ColumnSplitter.cs  FileExplorerUI.csproj  FileExplorerUI.slnx  MainWindow.xaml  MainWindow.xaml.bak-20260311-reset  MainWindow.xaml.cs  MainWindow.xaml.cs.bak-20260311-reset  NativeMethods.cs  Package.appxmanifest  SidebarControls.cs  SidebarView.xaml  SidebarView.xaml.cs  app.manifest
NorthFileUI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NorthFileUI.csproj  NorthFileUI.slnx  Package.appxmanifest
docs/: MemoryPath 扫描生成时机.md  README.md  Rust 文件管理器 MVP 功能矩阵与实现方案.md  Rust 模块化 + 缓存管理 + 双路径切换接口的 UML 风格架构.md  Rust 的职业级紧凑 FileEntry 内存布局设计.md  Rust 级 MFT 解析初版实施方案.md  Rust 级 MFT 解析方案.md  SIMD 文件名匹配器设计（Rust 工程级）.md  WinUI Shell 布局常量说明.md  WinUI details 首帧性能与诊断进展.md  WinUI 内容区多视图与双面板重构计划.md  WinUI 本地化约定.md  专业文件管理器的双路径架构.md  全局索引数据结构与演进方案.md  双面板行为回归清单.md  右键菜单实现说明.md  回归清单-week4.md  增强版 Mermaid 架构图代码.md  完整双路径架构一体化大图，把 MemoryPath + TraditionalPath + UI + 缓存 + USN + 搜索路径.md  已知问题.md  开发计划-v1-week1任务板.md  开发计划-v1.md  文件管理器-demo.md  文件管理器-gemini3.1.md  版本管理说明.md  (+4 more)
rust_engine/: Cargo.toml
rust_engine/src/: lib.rs
rust_engine/src/cache/: mod.rs
rust_engine/src/core/: error.rs  traits.rs  types.rs
rust_engine/src/engine/: mod.rs
rust_engine/src/ffi/: mod.rs
rust_engine/src/memory/: mod.rs
rust_engine/src/ntfs/: mod.rs
rust_engine/src/search/: mod.rs
rust_engine/src/traditional/: mod.rs
rust_engine/src/usn/: mod.rs
(+385 files in other folders)
